Info sur le code pour crée une nouvelle fenêtre dans "script4" crée une nouvelle fonction:

function MAFENETRE() {
  NouvelleFenetre("FENDESTYLE(garger yout pour tail par défaut)", "TITRE DE LA FAN", "../App/MAFEN.html", menu, menuIsVisible, false);
}

Le false à la fin permet d'afficher ou non le bouton actualiuser en haut de la fen, pratique pendant le dev
    
        02/01/23 : Ajout d'un lockscreen adaptatif pour W367 W8 et pour le futur W10 (apliquer à tous cas celui de WXP et 7 pas prêts)
        30/12/23 : Création theme windows 8
        29/12/23 : Création theme windows 8 BETA
        28/12/23 : Adaptation du theme WXP pour le changement de couleurs (test)
        24/12/23 : Actualisation des fenêtre qui le veulent pour s'adapter au theme
        23/12/23 : Obtimisation général + Nouvelle fenêtre adapative de m'essage d'érreur
        22/12/23 : ajout bouton actualisation sur les fenêtre réduit
        18/12/23 : ajout bouton réduire sur les fenêtre clonées
        18/12/23 : Modification de la barre des tahche pour l'ajout de boutons fonctionnel ! 
        17/12/23 : Obtimisation des themes en fonction des changements réaliser
        17/12/23 : Simplification de la création de fenêtres
        14/12/23 : Couleur, fond d'écran, calculatrice W7...
        13/12/23 : Ajout theme W7 + Réglage fenêtre en premier plan 
        12/12/23 : Séparation de la page principal pour plus d'obtion - ajout bios, boot...
Old 7 : 10/12/23 : Continuer le thème XP + vrai calc et notepad
        09/12/23 : rangement des fichiers dans le répertoire github
        09/12/23 : Continuer le thème XP avec des optimisations général
        02/12/23 : Mise a jours de google sites pour que ce soit automatique
        02/12/23 : Création de boutons thèmes
        02/12/23 : Ajouts d'un "BIOS" pour prise en charge de thème
        02/12/23 : Ouverture d'un HTML simple en plusieurs fichiers css/html/js