@@ -140,7 +140,7 @@
 <button class="BTSY" id="newwind" onclick="BlocNote()">Bloc Notes</button>
 <button class="BTSY" id="newwind2" onclick="Calculatrice()">Calculatrice</button>
 <button class="BTSY" id="newwind3" onclick="aBG()">Générateur de fond d'écran</button>
-<button class="BTSY" id="newwind4" onclick="Yout()">Personnaliser (DEV)</button>
+<button class="BTSY" id="newwind4" onclick="Yout()">Machine Virtuel</button>
 <button class="BTSY" id="newwind5" onclick="LOGO()">Crédits</button>
 <button class="BTSY" id="Bureau" onclick="Bureau()">Afficher bureau</button>
 
