@@ -6,7 +6,10 @@ function MAFENETRE() {
 
 Le false à la fin permet d'afficher ou non le bouton actualiuser en haut de la fen, pratique pendant le dev
     
-        02/01/23 : Ajout d'un lockscreen adaptatif pour W367 W8 et pour le futur W10 (apliquer à tous cas celui de WXP et 7 pas prêts)
+
+        04/01/24 : compatibilité avec le tactil (enfin)
+        03/01/24 : Crée W10 theme
+        02/01/24 : Ajout d'un lockscreen adaptatif pour W367 W8 et pour le futur W10 (apliquer à tous cas celui de WXP et 7 pas prêts)
         30/12/23 : Création theme windows 8
         29/12/23 : Création theme windows 8 BETA
         28/12/23 : Adaptation du theme WXP pour le changement de couleurs (test)
